--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,12 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.2'
     compile 'com.google.dagger:dagger:2.2'
     provided 'javax.annotation:jsr250-api:1.0'
+
+    /*
+    compile "com.google.dagger:dagger:2.8"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.8"
+    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'javax.inject:javax.inject:1'*/
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
