--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.emili.firstapp"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,51 +20,42 @@ android {
         }
     }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    // Retrofit
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:preference-v7:26.1.0'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 
-    // Butterknife
-
-    // Lightweight Stream
-
-    // dagger2 addition
-
-
+    //dependances injection
     compile "com.google.dagger:dagger:2.12"
     annotationProcessor "com.google.dagger:dagger-compiler:2.12"
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //firebase
+    compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
-    compile 'com.firebaseui:firebase-ui-auth:2.1.0'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.firebase:firebase-storage:11.4.2'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support:preference-v7:25.4.0'
-    compile 'com.android.support:support-vector-drawable:25.4.0'
-    compile 'com.android.support:recyclerview-v7:25.4.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.jakewharton:butterknife:8.7.0'
-    annotationProcessor 'com.jakewharton:butterknife:8.7.0'
-    compile 'com.annimon:stream:1.1.2'
-    /*
-    compile 'com.google.dagger:dagger:2.2'
-    compile 'com.android.support:support-v4:25.3.1'*/
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    //rxjava
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    //testing
     testCompile 'org.mockito:mockito-core:2.0.5-beta'
     testCompile 'junit:junit:4.12'
-//    apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    /*apt 'com.google.dagger:dagger-compiler:2.2'
-    provided 'javax.annotation:jsr250-api:1.0'*/
-    compile 'com.github.bumptech.glide:glide:3.8.0'
 }
+
 apply plugin: 'com.google.gms.google-services'
