--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
-        google()
+        maven {
+            url 'https://maven.google.com'
+            // Alternative URL is 'https://dl.google.com/dl/android/maven2/'
+        }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
